add explanation of the derivative of a polynomial

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -102,6 +102,22 @@
     "\n",
     "#### So what are derivatives and how do I use them?\n",
     "\n",
+    "Well lets stick with our example. What if I wanted to find the velocity of the ball ($ V_{y} $) for a given time ($ t $)? Well the velocity can be calculated as the change in displacement ($ ds $) divided by the change in time ($ dt $) or $ \\frac{ds}{dt} $.\n",
+    "\n",
+    "$$ \\frac{change~in~displacement}{change~in~time} = \\frac{ds}{dt} $$\n",
+    "\n",
+    "The derivative is defined as 'an instantaneous rate of change' which, as pointed out in the [video by 3Blue1Brown on the topic](https://youtu.be/9vKqVkMQHKk?si=QGEQitIiNg3zORRg&t=30s), is an oxymoron. \"Change is something that happens between separate points in time, and when you blind yourself to all but a single instant, there is no more room for change.\" For example if you wanted to get the velocity at 3 minutes (at an instant in time) and the velocity requires a change in time to calculate it then it really doesn't make sense at face value.\n",
+    "\n",
+    "So like in 3Blue1Brown lets take out the ambiguity and use an actual small value of time for our $ dt $. Let's say these 'instants in time' are actually small time periods of 0.01s. So our change in displacement is the displacement at time $ t + dt $ minus the displacement at time $ t $. Or in terms of of what we know so far (and replacing $ y(t) $ for $ s(t) $):\n",
+    "(TODO: change all references of y(t) to s(t) to avoid confusion)\n",
+    "\n",
+    "$$ ds = s(t + dt) - s(t) $$\n",
+    "\n",
+    "$$ ds = (V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2) $$\n",
+    "\n",
+    "$$ ds = (V_{iy}(dt) $$\n",
+    "\n",
+    "(TODO: Graph showing time on the x axis where it is marked at t and marked at dt)\n",
     "\n",
     "\n",
     "\n"
