finished the basics of explanation

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "#### What are polynomials?\n",
     "\n",
-    "They are equations can be used to describe linear processes. I always find I understand things when I have a real life example. A great example of a polynomial in the real world is a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this exercise we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following formula is a polynomial that represents the vertical height as a function of time ($ y(t) $) with respect to the initial velocity in the y direction ($ V_{iy} $) and time ($ t $). For this example we will consider acceleration due to gravity ($ g $) a constant at 9.8 as we are not shooting our ball into space (unfortunately).\n",
+    "They are equations that can be used to describe linear processes. I always find I understand things when I have a real life example. A great example of a polynomial in the real world is a ball being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this exercise we will fire our ball within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The following formula is a polynomial that represents the vertical height as a function of time ($ y(t) $) with respect to the initial velocity in the y direction ($ V_{iy} $) and time ($ t $). For this example we will consider acceleration due to gravity ($ g $) a constant at 9.8 as we are not shooting our ball into space (unfortunately).\n",
     "\n",
     "$$ y(t) = V_{iy}t - \\frac{1}{2}gt^2 $$\n",
     "\n",
@@ -111,15 +111,25 @@
     "So like in 3Blue1Brown lets take out the ambiguity and use an actual small value of time for our $ dt $. Let's say these 'instants in time' are actually small time periods of 0.01s. So our change in displacement is the displacement at time $ t + dt $ minus the displacement at time $ t $. Or in terms of of what we know so far (and replacing $ y(t) $ for $ s(t) $):\n",
     "(TODO: change all references of y(t) to s(t) to avoid confusion)\n",
     "\n",
-    "$$ ds = s(t + dt) - s(t) $$\n",
+    "$$ \\frac{ds}{dt} = \\frac{s(t + dt) - s(t)}{dt} $$\n",
     "\n",
-    "$$ ds = (V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2) $$\n",
+    "$$ \\frac{ds}{dt} = \\frac{(V_{iy}(t + dt) - \\frac{1}{2}g(t + dt)^2) - (V_{iy}t - \\frac{1}{2}gt^2)}{dt} $$\n",
     "\n",
-    "$$ ds = (V_{iy}(dt) $$\n",
+    "$$ \\frac{ds}{dt} = \\frac{V_{iy}(t) + V_{iy}(dt) - \\frac{1}{2}gt^2 - \\frac{1}{2}g(dt)^2 - g(t)(dt) - V_{iy}(t) + \\frac{1}{2}gt^2}{dt} $$\n",
+    "\n",
+    "$$ \\frac{ds}{dt} = \\frac{(V_{iy}(dt) - \\frac{1}{2}g(dt)^2 - g(t)(dt)}{dt} $$\n",
+    "\n",
+    "$$ \\frac{ds}{dt} = V_{iy} - \\frac{1}{2}g(dt) - g(t)(dt) $$\n",
+    "\n",
+    "Being instantaneous is the same as saying as approaching zero so it is as dt approaches zero ($ {dt \\to 0} $)\n",
+    "\n",
+    "So the middle term approaches zero.\n",
+    "\n",
+    "$$ \\frac{ds}{dt} = V_{iy} - g(t)(dt) $$\n",
+    "\n",
+    "So with the above equation we can work out the 'instantaneous velocity'.\n",
     "\n",
     "(TODO: Graph showing time on the x axis where it is marked at t and marked at dt)\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -191,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
