--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -143,6 +143,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 1], [12, 3], [56, 7]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TODOs: better naming of variables\n",
+    "# Maybe spread each step out so process is more clear\n",
+    "# Make better TODO list\n",
+    "x = [[1, 2], [3, 4], [7, 8]]\n",
+    "\n",
+    "def polynomial_differentiation(input_list):\n",
+    "\n",
+    "    output_equation = []\n",
+    "\n",
+    "    for a, b in input_list:\n",
+    "        output_equation.append([a * b, b - 1])\n",
+    "    \n",
+    "    return(output_equation)\n",
+    "        \n",
+    "\n",
+    "polynomial_differentiation(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
