Add functionality to solve for a known var

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -144,18 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[2, 1], [12, 3], [56, 7]]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 1], [12, 3], [56, 7]]\n",
+      "4376510\n"
+     ]
     }
    ],
    "source": [
@@ -164,17 +162,25 @@
     "# Make better TODO list\n",
     "x = [[1, 2], [3, 4], [7, 8]]\n",
     "\n",
-    "def polynomial_differentiation(input_list):\n",
+    "def polynomial_differentiation(input_list, known_var=False):\n",
     "\n",
     "    output_equation = []\n",
     "\n",
     "    for a, b in input_list:\n",
     "        output_equation.append([a * b, b - 1])\n",
-    "    \n",
+    "\n",
+    "    sum = 0\n",
+    "    if known_var:\n",
+    "        for coefficient, power in output_equation:\n",
+    "            sum += (known_var**power)*coefficient\n",
+    "\n",
+    "        return sum\n",
+    "\n",
     "    return(output_equation)\n",
     "        \n",
     "\n",
-    "polynomial_differentiation(x)"
+    "print(polynomial_differentiation(x))\n",
+    "print(polynomial_differentiation(x, 5))"
    ]
   },
   {
