reflection section is updated

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student name:"
+    "Student name: Deventhiran Ranganathan"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Student ID:"
+    "Student ID: 23315695"
    ]
   },
   {
@@ -184,7 +184,7 @@
     "    2*x^3 will be represented 3: 2, 6*x will be 1: 6, and 7 will be 0: 7\n",
     "\n",
     "    Returns:\n",
-    "    dict : Returning derivative of polynomial which also a polynomial\n",
+    "    dict : Returning derivative of polynomial which is also a polynomial\n",
     "\n",
     "   \"\"\"\n",
     "     der_of_poly={}\n",
@@ -273,11 +273,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Descrition of code:\n",
+    "    derivative_of_polynomial function take the poynomial representation of dict data type and applies derivatives using only power rule\n",
+    "    finally returns another polynomia which again dict data type\n",
+    "\n",
+    "    evaluate_polynomial function take polynomial as dict and x as int , evalutes the expression and returns integer.\n",
+    "\n",
+    "Advantages :\n",
+    "    Using  dictionay data type to represent the poynomial function is better approach as we can keep both powers and coefficients are associated with each others.\n",
+    "\n",
+    "Disadvantages:\n",
+    "   There is no support complex polynomial\n",
+    "   No Exception handling \n",
+    "    but these are not in the scope\n",
+    "\n",
+    "Peers work:\n",
+    "   I used peers work to understand the polynomial functions and derivatives as studied them 20 years back and understood the way how they are presenting in jypter notebook.\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
